Fix compilation errors, Tests make mainly no sense because of intensiv use of Mocks